--- a/Baby/baby/style.css
+++ b/Baby/baby/style.css
@@ -3,25 +3,24 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
-  .container {
+  .flex-container {
     display: flex;
+    gap: 10px;
     flex-wrap: wrap;
   }
-  .item {
-    width: calc(50%);
+  .flex-item {
+    width: calc(50% - 10px);
     background-color: lightblue;
     height: 50px;
     text-align: center;
     line-height: 50px;
-    border: 1px solid whitesmoke;
   }
   .large {
-    width: calc(100%);
+    width: calc(100% - 10px);
   }
   
   @media screen and (max-width: 1024px) {
     .flex-item {
-      width: calc(100% - 20px);
+      width: calc(100% - 10px);
     }
   }
